Fixed Navbar When on Small Devices

--- a/main.css
+++ b/main.css
@@ -21,6 +21,9 @@ body {
 .navbar-collapse {
     justify-content: flex-end;
 }
+.navbar-collapse .nav-link{
+}
+
 .header {
     background-image: url('images/background.jpg');
     background-size: cover;
